# src/controllers/user/authUser.js
@@ -2,6 +2,7 @@
 const { User } = require("../../models");
 const { verifyGoogleToken } = require("../../services");
 const { signAccessToken, signRefreshToken } = require("../../utils");
+const bcrypt = require("bcrypt");
 
 const createUser = async (req, res) => {
   const { idToken } = req.body;
@@ -30,14 +31,23 @@ const createUser = async (req, res) => {
     });
     const refreshToken = signRefreshToken({ userId: user._id });
     // ⬇️ Храним refresh token (лучше хэш, но можно так на старте)
-    user.refreshToken = refreshToken;
+    // user.refreshToken = refreshToken;
+    user.refreshToken = await bcrypt.hash(refreshToken, 10);
     await user.save();
     // ⬇️ Устанавливаем cookie
+    // const isProd = process.env.NODE_ENV === "production";
+    // res.cookie("refreshToken", refreshToken, {
+    //   httpOnly: true,
+    //   secure: process.env.NODE_ENV === "production",
+    //   sameSite: "strict",
+    //   maxAge: 30 * 24 * 60 * 60 * 1000, // 30 дней
+    // });
     res.cookie("refreshToken", refreshToken, {
       httpOnly: true,
-      secure: process.env.NODE_ENV === "production",
-      sameSite: "strict",
-      maxAge: 30 * 24 * 60 * 60 * 1000, // 30 дней
+      secure: true, // true только в prod
+      sameSite: "none",
+      // path: "/",
+      maxAge: 30 * 24 * 60 * 60 * 1000,
     });
     // ⬇️ Ответ клиенту
     res.json({
